<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="fakeContentDescription"></string>
    
    <string name="app_name">ParkSystem2</string>
    
    <string name="title_activity_login">登陆</string>
    <string name="usernameHint">手机号码</string>
    <string name="passwordHint">登陆密码</string>
    <string name="loginButtonText">登陆</string>
    <string name="forgetPasswordText">忘记密码</string>
    <string name="registNowText">立即注册</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="buttomButtonText1">停车</string>
    <string name="buttomButtonText2">附近</string>
    <string name="buttomButtonText3">服务</string>
    <string name="buttomButtonText4">我的</string>
    
    <string name="title_fragment1">停车</string>
    <string name="title_fragment2">附近</string>
    <string name="title_fragment3">服务</string>
    <string name="title_fragment4">我的</string>
    
    <string name="title_main_1">我要停车</string>
    <string name="parkNumberText">泊位编号</string>
    <string name="parkTimeToBuyText">购买时长</string>
    <string name="main_1_shouldPayText">应付停车费</string>

</resources>
